# simplevoice

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  GPU_PLAN.md  LIVE_TRANSCRIPTION.md  PLAN.md  README.md  SIMPLEVOICE.md  TASKS.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.antigravitycli/: 88615993-fd03-41dd-a454-051ae0b89a6b.json
.github/workflows/: release.yml
assets/Simplevoice.icon/: icon.json
aur/: README.md
aur/simplevoice/: PKGBUILD
aur/simplevoice-bin/: PKGBUILD  simplevoice-bin.install
design/: index.html
docs/superpowers/: TRANSCRIPTION-PROGRESS.md
docs/superpowers/plans/: 2026-06-03-onboarding-overlay.md  2026-06-04-i18n.md  2026-06-05-byok-model-list-and-test.md  2026-06-05-live-transcription-phase0a-streaming-core.md  2026-06-05-live-transcription-phase0b-wiring.md  2026-06-05-live-transcription-phase0c-frontend.md  2026-06-10-unlimited-recording.md  2026-06-12-readme-screenshots.md  2026-06-12-readme-shots-viewport-fix.md  2026-06-12-ui-polish-and-bar-move-discoverability.md  2026-06-20-etap-1a-decoder-resilience.md  2026-06-20-eval-harness.md
docs/superpowers/specs/: 2026-06-03-onboarding-overlay-design.md  2026-06-03-recommended-models-design.md  2026-06-04-i18n-design.md  2026-06-05-byok-model-list-and-test-design.md  2026-06-10-unlimited-recording-design.md  2026-06-12-readme-screenshots-design.md  2026-06-12-ui-polish-and-bar-move-discoverability-design.md  2026-06-20-etap-0-eval-harness-design.md  2026-06-20-etap-1a-decoder-resilience-design.md
new-tasks/: 01-sqlite-migration.md  02-enigo-integration.md  03-autostart-support.md  04-copy-last-shortcut.md  05-cross-platform-notes.md
scripts/: build-macos-icon.mjs  check-i18n-keys.mjs  tauri.js
scripts/readme-shots/: capture.mjs  fixtures.mjs  frame.html  mock.mjs  stage.html
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 01_init.sql
src-tauri/src/: audio.rs  error.rs  eval.rs  evdev_shortcuts.rs  lib.rs  linux_shortcuts.rs  logging.rs  main.rs  media_control.rs  search.rs  wayland_type.rs
src-tauri/src/refiner/: mod.rs
src-tauri/src/stt/: chunker.rs  cloud.rs  converter.rs  downloader.rs  factory.rs  ggml_whisper.rs  mod.rs  nemo_engine.rs  onnx_engine.rs  parakeet.rs  sherpa.rs  text.rs  traits.rs  vad.rs
src-tauri/src/stt/candle/: mod.rs  wav2vec.rs  whisper.rs
src-tauri/src/stt/streaming/: controller.rs  local_agreement.rs  mod.rs  segmenter.rs  stabilizer.rs  vad_segmented.rs  words.rs
src-tauri/tests/: engine_smoke.rs  long_audio.rs
src-tauri/tests/fixtures/: README.md  manifest.example.json
src/components/: Updater.tsx
src/components/brand/: WaveBar.tsx
src/components/layout/: Sidebar.tsx  TitleBar.tsx
src/components/onboarding/: OnboardingOverlay.tsx  OnboardingProvider.tsx  steps.tsx  useSpotlight.ts
src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  progress.tsx  setting-row.tsx  sonner.tsx  switch.tsx  tabs.tsx
src/context/: ConfigContext.tsx
src/i18n/: detect.ts  index.ts  language.ts  tray.ts
src/i18n/locales/: de.json  en.json  pl.json
src/lib/: localizeError.ts  overlayStatus.ts
src/utils/: sound.ts
src/views/: DictionaryView.tsx  ModelsView.tsx  RecordingWindowView.tsx  SettingsView.tsx  TranscriptionsView.tsx  UsageView.tsx
tasks/: 01-audio-engine.md  02-vad-integration.md  03-stt-engines.md  04-database-state.md  05-system-integration.md  task_1_1_parakeet_onnx.md  task_1_2_powershell_procs.md  task_2_1_byok_providers.md  task_2_2_shortcut_ui.md  task_2_3_vad_audio_leak.md  task_3_1_sqlite_pool.md  task_3_2_react_direct_sql.md  task_3_3_localstorage_monkeypatch.md  task_3_4_whisper_single_segment.md  task_3_5_cpu_threads.md  task_4_1_double_title_bar.md
