[package]
name = "simplevoice-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "simplevoice-app"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simplevoice_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
cpal = "0.15"
ringbuf = "0.4"
hound = "3.5"
chrono = "0.4"
num_cpus = "1.16"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
whisper-rs = { version = "0.16.0", default-features = false }
reqwest = { version = "0.12", features = ["json", "multipart"] }
keyring = "2.1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
tokio = { version = "1.52.3", features = ["full"] }
enigo = "0.6.1"
tauri-plugin-autostart = "2.5.1"
arboard = "3"
tauri-plugin-dialog = "2.7.1"
crossbeam-channel = "0.5"
thiserror = "2.0"
anyhow = "1.0"
rodio = { version = "0.20", features = ["symphonia-all"] }
# --- Candle ASR ---
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
ort = { version = "=2.0.0-rc.11", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
core-graphics = "0.25.0"
media-remote = "0.3.7"
whisper-rs = { version = "0.16.0", features = ["metal"] }
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
candle-core = { version = "0.8", optional = true, features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.16.0", default-features = false, features = ["vulkan"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16.0", default-features = false }

[features]
default = ["candle", "onnx"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
onnx = ["dep:ort"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3




