[package]
name = "simplevoice"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "simplevoice"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simplevoice_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
cpal = "0.15"
ringbuf = "0.4"
hound = "3.5"
chrono = "0.4"
num_cpus = "1.16"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
whisper-rs = { version = "0.16.0", default-features = false }
reqwest = { version = "0.12", features = ["json", "multipart"] }
keyring = "2.1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
tokio = { version = "1.52.3", features = ["full"] }
enigo = "0.6.1"
tauri-plugin-autostart = "2.5.1"
arboard = "3"
tauri-plugin-dialog = "2.7.1"
crossbeam-channel = "0.5"
thiserror = "2.0"
anyhow = "1.0"
rodio = { version = "0.20", features = ["symphonia-all"] }
# --- Candle ASR ---
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["onig"] }
sherpa-onnx = { version = "1.13.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
core-graphics = "0.25.0"
media-remote = "0.3.7"
whisper-rs = { version = "0.16.0", features = ["metal"] }
objc2 = "0.6.4"
# NSProcessInfo + NSString are used for the App Nap opt-out during transcription.
# They are part of the default feature set, but list them explicitly so the build
# does not silently lose them if defaults are ever disabled.
objc2-foundation = { version = "0.3.2", features = ["NSProcessInfo", "NSString"] }
# Encode-able CGRect/CGPoint geometry for re-pinning the main window traffic
# lights (reposition_main_traffic_lights in lib.rs). Already in the tree via tao.
objc2-core-foundation = "0.3.2"
candle-core = { version = "0.8", optional = true, features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.16.0", default-features = false, features = ["vulkan"] }
# Native Wayland text injection (replaces the external `wtype` binary).
wayland-client = "0.31"
wayland-protocols-misc = { version = "0.3", features = ["client"] }
libc = "0.2"
# Enable arboard's native Wayland clipboard backend (wlr-data-control via the
# pure-Rust wl-clipboard-rs), replacing the external `wl-copy` binary.
arboard = { version = "3", features = ["wayland-data-control"] }
# Native global hotkeys on Wayland by reading /dev/input directly (no compositor
# config edits, no external tools); works on niri and any compositor.
evdev = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.16.0", default-features = false }

[features]
default = ["candle", "onnx"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers"]
onnx = ["dep:sherpa-onnx"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
